updated recursive token rule to support none scoped recursive patterns and added missing factory methods to the TokenRules helper class